# embedded-example

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh
.cargo/: config
step1-puts/: Cargo.toml  fib.rs
step2-print/: Cargo.toml  build.rs
step2-print/src/: debug.rs  main.rs
step3-string/: Cargo.toml  link.x
step3-string/src/: debug.rs  main.rs  memory.rs
