#[package]
#name = "embedded-example"
#version = "0.1.0"
#repository = "https://github.com/elfmimi/embedded-example/"

[workspace]
members = [
    "step1-puts",
    "step2-print",
    "step3-string",
]

#[package.metadata.cargo-xbuild]
#memcpy = true
# # sysroot_path = "target/sysroot" # default
#panic_immediate_abort = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
opt-level = 's' # optimize for size
lto = true # better optimizations
