[package]
name = "step3-string"
version = "0.1.0"
authors = ["Ein Terakawa <applause@elfmimi.jp>"]
edition = "2018"

[features]
default = ["panic_location", "panic_message"]
panic_location = []
panic_message = []
abort_handler = []

[dependencies]

[dependencies.spinning_top]
version = "0.1.0"
features = ["nightly"]

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.0"

#[profile.release]
#codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on Flash
#opt-level = 's' # optimize for size
#lto = true # better optimizations

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.cargo-xbuild]
memcpy = true
# sysroot_path = "target/sysroot" # default
panic_immediate_abort = false
